- Fixed the underbarrel grenade launcher not properly using requirements to be available onlty to rifle-sized weapons.
- Marked the Changeling qualities as not doubling cost in career mode. Closes #5118
- City Slicker properly gives +1 dice for Survival (Urban) instead of -2.

Changed/New Strings:
- LimitCondition_SkillsActiveLeadership
- Checkbox_Options_AllowHoverIncrement
- Checkbox_Options_InsertPdfNotesIfAvailable
- Label_Options_MaximumMartialArts
- Label_Options_MaximumMartialTechniques
- String_MasteryPointsAcronym
- Label_BonusLP
- Message_DuplicateFile
- MessageTitle_DuplicateFile
- Message_SelectGeneric_HaveAttributeEnabled
- String_ComplexFormTargetIcon
- Rating_SqMeters
- Label_SelectMentorSpirit_Disadvantage
- Label_SelectMentorSpirit_Choices
- String_DamageFire
- Message_DeleteArmorMod
- Message_DeleteWeaponAccessory
- String_ExpensePurchaseVehicleWeaponMount
- String_ExpenseSoldVehicleWeaponMount
- Label_Options_Carryover_Nuyen
- Label_Options_Carryover_Karma
- Node_UnequippedModularBioware
- String_MinimumAttribute
- String_MaximumAttribute

Removed Strings:
- Label_SelectMetamagic_Disadvantage
- Label_Options_Carryover

Build 225
Application Changes:
- Added the ability to re-apply the improvements of individual items instead of only for the entire character all at once. Implements #4628.
- Attempting to reassign or reapply priorities or metatypes that give access to special attributes and/or skills linked to special attributes no longer causes Chummer to crash.
- Fixed some rare bugs and crashes that could occur when writing to a file that Chummer was simultaneously attempting to read in.
- Trying to add an item with a weapon select entry that relies on selecting for weapon details no longer causes a crash. Fixes #4934.
- Markup and Black Market Pipeline cost modifiers applied to a weapon mount now properly apply based on all options of the weapon mount instead of just its size. Fixes #4933.