@@ -1683,6 +1683,9 @@
         <technique>
           <name>Neijia</name>
         </technique>
+        <technique>
+          <name>Strike the Darkness</name>
+        </technique>
       </techniques>
       <source>SAG</source>
       <page>17</page>
@@ -1711,6 +1714,9 @@
         </technique>
         <technique>
           <name>Neijia</name>
+        </technique>
+        <technique>
+          <name>Strike the Darkness</name>
         </technique>
       </techniques>
       <source>SAG</source>
@@ -1741,6 +1747,9 @@
         <technique>
           <name>Neijia</name>
         </technique>
+        <technique>
+          <name>Strike the Darkness</name>
+        </technique>
       </techniques>
       <source>SAG</source>
       <page>17</page>
@@ -1770,6 +1779,9 @@
         <technique>
           <name>Neijia</name>
         </technique>
+        <technique>
+          <name>Strike the Darkness</name>
+        </technique>
       </techniques>
       <source>SAG</source>
       <page>17</page>
@@ -1798,6 +1810,9 @@
         </technique>
         <technique>
           <name>Neijia</name>
+        </technique>
+        <technique>
+          <name>Strike the Darkness</name>
         </technique>
       </techniques>
       <source>SAG</source>
